Adjusted table height for white and black themes

--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -1,7 +1,8 @@
 html{font-family:arimo}
 body{font-size:14px;color:#606E7F;background-color:#E4E2E4;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-@media (max-width:1920px){#template{min-width:1080px;margin:0}}
-@media (min-width:1921px){#template{min-width:1080px;max-width:1920px;margin:0 auto}}
+@media (max-width:1280px){#template{min-width:1080px;margin:0}}
+@media (min-width:1281px){#template{min-width:1280px;margin:0}}
+@media (min-width:1921px){#template{min-width:1280px;max-width:1920px;margin:0 auto}}
 img{border:0;text-decoration:none;vertical-align:middle}
 p{text-align:left}
 p.centered{text-align:left}
