Styled logout page, similar to shutdown/reboot

--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -81,6 +81,7 @@ form+p{display:none}
 #nav-item.InfoButton a:before{content:'\f05a'}
 #nav-item.LogButton a:before{content:'\f14b'}
 #nav-item.PowerButton a:before{content:'\f011'}
+#nav-item.LogoutButton a:before{content:'\f08b'}
 #nav-item a i{display:none}
 #nav-user{display:block;float:left;text-align:center;border:none}
 #nav-user.probe{font-size:11px;margin-left:3px;margin-right:8px}
